# team-moos

./: CMakeLists.txt
missions/: .gitignore
missions/front_estimate/front_baseline/: .gitignore  output.txt
missions/lab_12/jake_kasper_baseline/: .gitignore  .gitignore~  launch.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pEchoVar.moos  plug_pGenPath.moos  plug_uFldHazardMgrX.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  plug_uTimerScript.moos  targ_jake.bhv  targ_jake.moos  targ_kasper.bhv  targ_kasper.moos  targ_shoreside.moos
missions/lab_16/: .gitignore
missions/lab_16/lab_16_front_estimate_adjust/: lab_17_data.txt  launch.sh  meta_shoreside.moos  output.txt  plug_pFrontEstimate.moos  plug_uFldCTDSensor.moos  plug_uFldCTDSensor_1.moos
missions/lab_16/lab_16_front_estimate_baseline/: .LastOpenedMOOSLogDirectory  output.txt  program.cpp  (+3 more)
src/: CMakeLists.txt
src/lib_baxter_anneal/: CFrontSim2.cpp  CMakeLists.txt  CSimAnneal2.cpp  CSimAnneal2.h  Genetic.cpp  Genetic.h
src/lib_behaviors-test/: AOF_FindTempFront.cpp  AOF_FindTempFront.h  BHV_AvoidBoundary.cpp  BHV_AvoidBoundary.h  BHV_FindTempFront.cpp  BHV_FindTempFront.h  CMakeLists.txt  Tempps.h  temps.h
src/pFrontEstimate/: CMakeLists.txt  FrontEstimate.cpp  FrontEstimate.h
src/pGenPath/: CompPath.cpp  CompPath.h  GenPath.cpp  GenPath.h
src/pGradeFrontEstimate/: GradeFrontEstimate.cpp  GradeFrontEstimate.h
src/uFldHazardMgrX/: HazardClassification.cpp  HazardClassification.h  HazardMgr.cpp  HazardMgr.h  HazardMgr_Info.cpp
test/: test.txt
(+54 files in other folders)
